# wagtail-app

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-image.yml  tests.yml
app/: apps.py  mixins.py  permissions.py  urls.py
app/books/: __init__.py  apps.py  models.py  serializers.py  views.py
app/books/migrations/: 0001_initial.py  0002_initial.py
app/books/tests/: __init__.py  test_models.py  test_views.py
app/users/: __init__.py  apps.py  models.py  serializers.py
app/users/migrations/: 0001_initial.py
app/users/tests/: __init__.py  test_models.py
